--- a/newsapp/package.json
+++ b/newsapp/package.json
@@ -26,8 +26,10 @@
     "@ionic/angular": "^4.1.0",
     "@ionic/pro": "2.0.4",
     "@ionic/storage": "^2.2.0",
+    "cordova": "^9.0.0",
     "cordova-android": "8.0.0",
     "core-js": "^2.5.4",
+    "ionic": "^4.12.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
@@ -53,7 +55,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
