--- a/newsapp/package.json
+++ b/newsapp/package.json
@@ -26,6 +26,7 @@
     "@ionic/angular": "^4.1.0",
     "@ionic/pro": "2.0.4",
     "@ionic/storage": "^2.2.0",
+    "@swimlane/ngx-charts": "^10.1.0",
     "cordova-android": "^8.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
